--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -39,7 +39,9 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="scrollable">
+            app:tabMode="scrollable"
+            app:tabMaxWidth="0dp"
+            app:tabGravity="fill">
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
